DELETE, PUT, POST, GET usuarios swagger
