# storage/api-docs/api-docs.json
@@ -10,7 +10,7 @@
         "http"
     ],
     "paths": {
-        "/users/": {
+        "/users": {
             "get": {
                 "tags": [
                     "users"
@@ -25,14 +25,12 @@
                         "description": "OK"
                     }
                 }
-            }
-        },
-        "/users": {
+            },
             "post": {
                 "tags": [
                     "users"
                 ],
-                "summary": "Registrar usuario",
+                "summary": "Registra un usuario",
                 "description": "",
                 "operationId": "post_user",
                 "consumes": [
@@ -89,6 +87,88 @@
                         "schema": {
                             "$ref": "#/definitions/ErrorModel"
                         }
+                    },
+                    "404": {
+                        "description": "User not found",
+                        "schema": {
+                            "$ref": "#/definitions/ErrorModel"
+                        }
+                    }
+                }
+            },
+            "put": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Edita un usuario",
+                "description": "",
+                "operationId": "put_user",
+                "consumes": [
+                    "application/json",
+                    "application/xml"
+                ],
+                "produces": [
+                    "application/xml",
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de un usuario",
+                        "required": true,
+                        "type": "integer"
+                    },
+                    {
+                        "name": "body",
+                        "in": "body",
+                        "description": "",
+                        "schema": {
+                            "$ref": "#/definitions/User"
+                        }
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Invalid id supplied"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    },
+                    "200": {
+                        "description": "Updated succesfully"
+                    }
+                }
+            },
+            "delete": {
+                "tags": [
+                    "users"
+                ],
+                "summary": "Elimina un usuario",
+                "description": "",
+                "operationId": "delete_user",
+                "produces": [
+                    "application/xml",
+                    "application/json"
+                ],
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID de un usuario",
+                        "required": true,
+                        "type": "integer"
+                    }
+                ],
+                "responses": {
+                    "400": {
+                        "description": "Invalid ID supplied"
+                    },
+                    "404": {
+                        "description": "User not found"
+                    },
+                    "200": {
+                        "description": "Deleted succesfully"
                     }
                 }
             }
